# react-native-plugin

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  mit-geolocation.podspec  package.json  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/mitgeolocation/: MitGeolocationModule.kt  MitGeolocationPackage.kt
example/: app.json  package.json
example/android/: settings.gradle
example/ios/: File.swift  Podfile
example/src/: App.tsx
ios/: MitGeolocation.h  MitGeolocation.mm  libmit_geolocation.h
src/: index.tsx
